[package]
name = "vulkano-derive"
version = "0.17.0"
authors = ["José Miguel Sánchez García <soy.jmi2k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
vulkano = "0.17"
